--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,23 +28,20 @@ nav{
   text-align: right;
   text-decoration: none;
 }
-#link1{margin-right: 1rem;}
-#link2{margin-right: 5rem;}
-#link3{margin-right: 9.5rem;}
-#link4{margin-right: 12.75rem;}
-/* ******************** END OF NAV  *************************** */
-
+#link1{margin-right: 15.75rem;}/*About */
+#link2{margin-right: 11rem;}/*Demos */
+#link3{margin-right: 8rem;}/*Blog */
+#link4{margin-right: 1rem}/* Contact */
+/* ****************************** END OF NAV  *************************** */
+/* --------------------------   HEADER   ------------------------------------ */
 .container {
-  text-align: center;
+  width: 100%;
 }
 
 #header-image{
   width: 100%;
   height: 50vh;
 }
-#glaze{
- 
-  background-color: white;}
 
 #header-text{
   position: absolute;
@@ -64,6 +61,29 @@ nav{
   left: 110vh;
   width: 35vh;
   height: 40vh;
+}
+
+/* ******************************* END OF HEADER ******************************* */
+/* #about .container{
+  display: inline;
+} */
+#about h2{
+  font-size: 40px;
+}
+
+#bitAbout{
+display: inline;
+text-align: start;
+font-size: 20px;
+width: 35%;
+margin: 4rem;
+}
+
+#meCollage{
+  display: inline-flex;
+  width: 500px;
+  height: 500px;
+  margin:2rem;
 }
 
 
