--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,14 @@
   
 }
 
-body{background-color:  rgb(252, 248, 242);}
+body{
+  background-color:  rgb(252, 248, 242);}
+
+.container {
+  width: 100%;
+  height: auto;
+  /* border: #ff0000 1px solid; */
+}
 
 /* ******************** START OF NAV  *************************** */
 nav{
@@ -34,9 +41,7 @@ nav{
 #link4{margin-right: 1rem}/* Contact */
 /* ****************************** END OF NAV  *************************** */
 /* --------------------------   HEADER   ------------------------------------ */
-.container {
-  width: 100%;
-}
+
 
 #header-image{
   width: 100%;
@@ -64,27 +69,142 @@ nav{
 }
 
 /* ******************************* END OF HEADER ******************************* */
-/* #about .container{
+/* --------------------------   ABOUT SECTION   ------------------------------------ */
+section #about{
+  margin:30px;
+  height: 80vh;
+  border-top: #ff0000 1px solid;
+  border-right: #ff0000 3px solid;
+  border-radius: 0 35px ;
+}
+
+.column{
   display: inline;
-} */
-#about h2{
+  /* float: left; */
+}
+
+h2{
   font-size: 40px;
+  text-align: center;
 }
 
 #bitAbout{
-display: inline;
+display: flex;
+float: left;
 text-align: start;
 font-size: 20px;
+line-height: 2rem;
 width: 35%;
-margin: 4rem;
+margin-left: 8rem;
+margin-top: 4rem;
+
 }
 
 #meCollage{
-  display: inline-flex;
-  width: 500px;
+  display: flex;
+  width: 30%;
   height: 500px;
-  margin:2rem;
+  float: right;
+  margin-right: 9rem;
 }
+
+/* ******************************* END OF ABOUT ******************************* */
+/* --------------------------   PROJECT SECTION  ------------------------------------ */
+section #projects{
+  margin:30px;
+  height: 80vh;
+  border-top: #ff0000 1px solid;
+  border-left: #ff0000 3px solid;
+  border-radius:  35px 0;
+}
+
+
+#projects .column{
+  display: inline-flex;
+}
+
+#project1, #project2, #project3 {
+  flex-direction: column;
+  border: #ff000034 1px solid;
+  border-radius: 25px;
+  justify-content: space-evenly;
+  width: 24%;
+  height: 470px;
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.5rem;
+  margin-left:8rem;
+  margin-right: 2rem;
+} 
+
+
+
+#project-image1, #project-image2, #project-image3{
+  border-radius: 25px 25px 0 0;
+  display: inline;
+  object-fit: cover;
+  width: 100%;
+  height: 315px;
+  margin-right: 2rem;
+  border-bottom: #ff0000  1px solid;
+}
+
+#demos-link{
+text-align: center;
+}
+
+/* ******************************* END OF ABOUT ******************************* */
+/* --------------------------   BLOG SECTION  ------------------------------------ */
+
+section #blogs{
+  margin:30px;
+  height: 40vh;
+  border-top: #ff0000 1px solid;
+  border-right: #ff0000 3px solid;
+  border-radius: 0 35px ;
+}
+#blogs .column{
+  display: inline-flex;
+}
+
+#blog1, #blog2, #blog3 {
+  flex-direction: column;
+  background-color: rgb(247, 64, 64);
+  color: white;
+  border: #ff000034 1px solid;
+  border-radius: 25px;
+  justify-content: space-evenly;
+  width: 24%;
+  text-align: center;
+  margin-left:8rem;
+  margin-right: 2rem;
+} 
+
+h3{
+  font-size: 28px;
+}
+#blogs a{
+  text-decoration: none;
+  color: white;
+}
+
+#blogs a:visited{
+  text-decoration: none;
+  color: rgb(5, 46, 116);
+}
+/* #project-image1, #project-image2, #project-image3{
+  border-radius: 5% 5% 0 0;
+  display: inline;
+  object-fit: cover;
+  width: 424px;
+  height: 315px;
+  margin-right: 2rem;
+  border-bottom: #ff0000  1px solid;
+} */
+
+
+
+
 
 
 
