--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ nav{
 
 #header-image{
   width: 100%;
-  height: 50vh;
+  height: 60dvh;
 }
 
 #header-text{
@@ -62,8 +62,8 @@ nav{
 
 #profile-pic{
   position: absolute;
-  top: 10vh;
-  left: 110vh;
+  top: 10dvh;
+  left: 125dvh;
   width: 35vh;
   height: 40vh;
 }
