--- a/src/App.css
+++ b/src/App.css
@@ -14,21 +14,21 @@ body{
 
 /* ******************** START OF NAV  *************************** */
 nav{
-  min-height: 3vh;
+  min-height: 3rem;
   padding:0.5rem;
   justify-content: center;
   font-size: 20px ;
 }
 
 #logo {
-  position:absolute;
+  position: absolute;
   left: 15px;
   height: 95px;
   width: 95px;
 }
 
 #link1, #link2, #link3, #link4{
-  position:absolute;
+  position: absolute;
   right: 10px;
   color: #000000;
   margin-right: 5rem;
@@ -39,6 +39,7 @@ nav{
 #link2{margin-right: 11rem;}/*Demos */
 #link3{margin-right: 8rem;}/*Blog */
 #link4{margin-right: 1rem}/* Contact */
+
 /* ****************************** END OF NAV  *************************** */
 /* --------------------------   HEADER   ------------------------------------ */
 
@@ -70,82 +71,72 @@ nav{
 
 /* ******************************* END OF HEADER ******************************* */
 /* --------------------------   ABOUT SECTION   ------------------------------------ */
-section #about{
-  margin:30px;
-  height: 80vh;
+ #about{
+  margin-top: 40px;
+  /* min-height: 80vh; */
   border-top: #ff0000 1px solid;
   border-right: #ff0000 3px solid;
   border-radius: 0 35px ;
-}
-
-.column{
-  display: inline;
-  /* float: left; */
+  /* display: inline-block; */
 }
 
 h2{
   font-size: 40px;
   text-align: center;
+  padding: 2rem;;
 }
 
 #bitAbout{
 display: flex;
+flex-direction: column;
 float: left;
 text-align: start;
 font-size: 20px;
-line-height: 2rem;
+/* line-height: 2rem; */
 width: 35%;
-margin-left: 8rem;
-margin-top: 4rem;
-
+/* margin-left: 8rem; */
+margin-top: 2rem;
+line-height: 2rem;
 }
 
 #meCollage{
-  display: flex;
-  width: 30%;
-  height: 500px;
-  float: right;
-  margin-right: 9rem;
+  width: 90%;
+  height: 400px;
+  margin-bottom: 2rem; 
 }
 
 /* ******************************* END OF ABOUT ******************************* */
 /* --------------------------   PROJECT SECTION  ------------------------------------ */
-section #projects{
-  margin:30px;
-  height: 80vh;
+#projects{
+  display: inline-flex;
+  /* margin: 3rem; */
+  min-height: 80dvh;
   border-top: #ff0000 1px solid;
   border-left: #ff0000 3px solid;
   border-radius:  35px 0;
 }
 
-
 #projects .column{
-  display: inline-flex;
+  display: inline;
+  flex-direction: column;
 }
 
+
 #project1, #project2, #project3 {
-  flex-direction: column;
-  border: #ff000034 1px solid;
-  border-radius: 25px;
-  justify-content: space-evenly;
-  width: 24%;
-  height: 470px;
-  text-align: center;
-  font-size: 16px;
+  height: 460px;
   line-height: 1.5rem;
-  margin-left:8rem;
-  margin-right: 2rem;
+  margin-left:4rem;
 } 
 
 
 
 #project-image1, #project-image2, #project-image3{
-  border-radius: 25px 25px 0 0;
   display: inline;
   object-fit: cover;
   width: 100%;
-  height: 315px;
+  height: 65%;
   margin-right: 2rem;
+  padding-bottom: 1rem;;
   border-bottom: #ff0000  1px solid;
 }
 
@@ -153,31 +144,26 @@ section #projects{
 text-align: center;
 }
 
-/* ******************************* END OF ABOUT ******************************* */
+/* ******************************* END OF PROJECTS ******************************* */
 /* --------------------------   BLOG SECTION  ------------------------------------ */
 
-section #blogs{
-  margin:30px;
-  height: 40vh;
+#blogs{
+  display: inline-flex;
+  padding-bottom: 40px; 
+  min-height: 40vh;
   border-top: #ff0000 1px solid;
   border-right: #ff0000 3px solid;
   border-radius: 0 35px ;
 }
-#blogs .column{
-  display: inline-flex;
-}
+
 
 #blog1, #blog2, #blog3 {
-  flex-direction: column;
   background-color: rgb(247, 64, 64);
   color: white;
-  border: #ff000034 1px solid;
   border-radius: 25px;
-  justify-content: space-evenly;
-  width: 24%;
-  text-align: center;
-  margin-left:8rem;
+  margin-left:4rem; 
   margin-right: 2rem;
+  padding-top: 1rem;
 } 
 
 h3{
@@ -190,22 +176,87 @@ h3{
 
 #blogs a:visited{
   text-decoration: none;
-  color: rgb(5, 46, 116);
+  color: rgb(60, 31, 31);
 }
-/* #project-image1, #project-image2, #project-image3{
-  border-radius: 5% 5% 0 0;
-  display: inline;
-  object-fit: cover;
-  width: 424px;
-  height: 315px;
-  margin-right: 2rem;
-  border-bottom: #ff0000  1px solid;
-} */
+/* ******************************* END OF BLOG SECTION  ******************************* */
+/* --------------------------   FOOTER  ------------------------------------ */
+footer{
+  background-color: rgb(26, 26, 26) ;
+  height: 50vh;
+  color: rgb(252, 248, 242);
+}
+footer h2{
+  padding-top: 5rem;
+}
+
+footer button{
+  margin-bottom: 3rem;
+  font-size: larger;
+  border-radius: 8px;
+  padding: .5rem;
+}
+footer i{
+  margin-bottom: 5rem;
+  font-size: 40px;
+}
 
 
 
 
+/* +++++++++++++++++++++++++++++++ ABOUT ME PAGE +++++++++++++++++++++++++++++++ */
+section #about-page{
+  margin:30px;
+  min-height: 80vh;
+  border-top: #ff0000 1px solid;
+  border-right: #ff0000 3px solid;
+  border-radius: 0 35px ;
+}
 
+
+h2{
+  font-size: 40px;
+  text-align: center;
+}
+
+#bio1, #bio3, .values{
+display: flex;
+float: left;
+text-align: start;
+font-size: 20px;
+min-height: 50dvh;
+width: 40%;
+margin-left: 8rem;
+margin-top: 4rem;
+line-height: 2rem;
+}
+
+#bio2{
+  display: flex;
+  flex-direction: column;
+  float: right;
+  text-align: start;
+  font-size: 20px;
+  min-height: 50dvh;
+  width: 40%;
+  margin-right: 8rem;
+  margin-top: 4rem;
+  line-height: 2rem;
+  }
+
+#about-image1, #about-image3{
+  display: flex;
+  width: 30%;
+  height: 450px;
+  float: right;
+  margin-right: 9rem;
+}
+#about-image2{
+  display: flex;
+  width: 25%;
+  height: 425px;
+  float: left;
+  margin-left: 9rem;
+}
 
 
 /* @keyframes App-logo-spin {
