--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;1,300&family=Gelasio:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,900&family=Frank+Ruhl+Libre:wght@400;500;700;900');
+
+
+/* 
+font-family: 'Cormorant Garamond', serif;         too light for nav
+font-family: 'Gelasio', serif;                    no for nav, yes for p -better at defining space between links
+font-family: 'Playfair Display', serif;           ok for headings
+font-family: 'Frank Ruhl Libre', serif;           
+*/
+
+
 .App {
   text-align: center;
   
 }
 
 body{
-  background-color:  rgb(252, 248, 242);}
+  background-color:  rgb(252, 248, 242);
+  
+}
 
-.container {
+/* .container {
   width: 100%;
   height: auto;
-  /* border: #ff0000 1px solid; */
-}
+  border: #ff0000 1px solid;
+} */
 
 /* ******************** START OF NAV  *************************** */
 nav{
@@ -18,6 +31,11 @@ nav{
   padding:0.5rem;
   justify-content: center;
   font-size: 20px ;
+  font-family: 'Gelasio', serif;
+  /* font-weight: bold; */
+}
+#navlinks .active{
+  color: red
 }
 
 #logo {
@@ -33,12 +51,13 @@ nav{
   color: #000000;
   margin-right: 5rem;
   text-align: right;
-  text-decoration: none;
+  text-decoration: none ;
 }
-#link1{margin-right: 15.75rem;}/*About */
-#link2{margin-right: 11rem;}/*Demos */
-#link3{margin-right: 8rem;}/*Blog */
-#link4{margin-right: 1rem}/* Contact */
+
+#link1{margin-right: 18.5rem;}/*About */
+#link2{margin-right: 13.25rem;}/*Demos */
+#link3{margin-right: 7.75rem;}/*Blog */
+#link4{margin-right: .51rem}/* Contact */
 
 /* ****************************** END OF NAV  *************************** */
 /* --------------------------   HEADER   ------------------------------------ */
@@ -51,39 +70,56 @@ nav{
 
 #header-text{
   position: absolute;
-  top: 15vh;
-  left: 20vh;
+  top: 20dvh;
+  left: 20dvh;
   text-align: left;
   color: white;
+  
 }
 
-#header-text h1{font-size: 60px;}
-#header-text h2{font-size: 48px; color: rgb(247, 64, 64);}
-#header-text h4{font-size: 32px;}
+#header-text h1{font-size: 60px; 
+  font-family: 'Playfair Display', serif; 
+  font-weight: 700;
+  text-shadow: rgb(182, 182, 181) 1px 1px 3px;
+}
+
+#header-text h2{font-size: 50px; 
+  color:rgb(246, 70, 70);
+  font-family:'Playfair Display', serif;
+  font-weight: 700;         
+  letter-spacing: .3rem;
+  text-shadow: rgb(0, 0, 0) 3px 2px 2px;
+  text-align: start;
+}
+
+#header-text h4{
+  font-size: 32px; 
+  font-family: 'Gelasio', serif;
+  text-shadow: rgb(182, 182, 181) 1px 1px 3px;
+ }
 
 #profile-pic{
   position: absolute;
-  top: 10dvh;
-  left: 125dvh;
-  width: 35vh;
-  height: 40vh;
+  top: 15dvh;
+  left: 120dvh;
+  width: 40dvh;
+  height: 45dvh;
 }
 
 /* ******************************* END OF HEADER ******************************* */
 /* --------------------------   ABOUT SECTION   ------------------------------------ */
  #about{
   margin-top: 40px;
-  /* min-height: 80vh; */
   border-top: #ff0000 1px solid;
   border-right: #ff0000 3px solid;
   border-radius: 0 35px ;
-  /* display: inline-block; */
-}
+ }
 
 h2{
   font-size: 40px;
   text-align: center;
-  padding: 2rem;;
+  padding: 2rem;
+  font-family:'Playfair Display', serif;
 }
 
 #bitAbout{
@@ -91,12 +127,10 @@ display: flex;
 flex-direction: column;
 float: left;
 text-align: start;
-font-size: 20px;
-/* line-height: 2rem; */
-width: 35%;
-/* margin-left: 8rem; */
-margin-top: 2rem;
+font-size: 22px;
+font-family: 'Frank Ruhl Libre', serif;
 line-height: 2rem;
+
 }
 
 #meCollage{
@@ -121,22 +155,26 @@ line-height: 2rem;
   flex-direction: column;
 }
 
+#project1 p, #project2 p, #project3 p, #project4 p, #project5 p{
+  padding: 1rem;
+  font-size: 18px;
+  font-family: 'Frank Ruhl Libre', serif;
+}
 
-#project1, #project2, #project3 {
+#project1, #project2, #project3,#project4 , #project5 {
   height: 460px;
   line-height: 1.5rem;
-  margin-left:4rem;
+  margin-top: 3rem;
 } 
 
 
 
-#project-image1, #project-image2, #project-image3{
+#project-image1, #project-image2, #project-image3, #project-image4, #project-image5{
   display: inline;
   object-fit: cover;
-  width: 100%;
+  width: 90%;
   height: 65%;
-  margin-right: 2rem;
-  padding-bottom: 1rem;;
+  padding-bottom: 1rem;
   border-bottom: #ff0000  1px solid;
 }
 
@@ -148,7 +186,7 @@ text-align: center;
 /* --------------------------   BLOG SECTION  ------------------------------------ */
 
 #blogs{
-  display: inline-flex;
+  display: flex;
   padding-bottom: 40px; 
   min-height: 40vh;
   border-top: #ff0000 1px solid;
@@ -161,9 +199,11 @@ text-align: center;
   background-color: rgb(247, 64, 64);
   color: white;
   border-radius: 25px;
-  margin-left:4rem; 
-  margin-right: 2rem;
+  margin-left:3rem; 
   padding-top: 1rem;
+  margin-bottom: 1rem;
+  max-width: 30%;
+  font-family: 'Frank Ruhl Libre', serif;
 } 
 
 h3{
@@ -187,6 +227,7 @@ footer{
 }
 footer h2{
   padding-top: 5rem;
+  font-weight: bold;
 }
 
 footer button{
@@ -194,6 +235,7 @@ footer button{
   font-size: larger;
   border-radius: 8px;
   padding: .5rem;
+  font-family: 'Frank Ruhl Libre', serif;
 }
 footer i{
   margin-bottom: 5rem;
@@ -204,12 +246,18 @@ footer i{
 
 
 /* +++++++++++++++++++++++++++++++ ABOUT ME PAGE +++++++++++++++++++++++++++++++ */
-section #about-page{
-  margin:30px;
-  min-height: 80vh;
+#about-page1{
+  padding-top: 30px;
   border-top: #ff0000 1px solid;
   border-right: #ff0000 3px solid;
   border-radius: 0 35px ;
+}
+
+#about-page2{
+  padding-top: 30px;
+  border-top: #ff0000 1px solid;
+  border-left: #ff0000 3px solid;
+  border-radius: 35px 0;
 }
 
 
@@ -218,47 +266,130 @@ h2{
   text-align: center;
 }
 
-#bio1, #bio3, .values{
+#bio1, #bio3{
 display: flex;
 float: left;
 text-align: start;
 font-size: 20px;
 min-height: 50dvh;
-width: 40%;
-margin-left: 8rem;
+width: 80%;
+margin-left: 5rem;
 margin-top: 4rem;
 line-height: 2rem;
+font-family: 'Frank Ruhl Libre', serif;
 }
+
+
 
 #bio2{
   display: flex;
   flex-direction: column;
-  float: right;
   text-align: start;
   font-size: 20px;
   min-height: 50dvh;
-  width: 40%;
-  margin-right: 8rem;
+  width: 80%;
   margin-top: 4rem;
   line-height: 2rem;
+  font-family: 'Frank Ruhl Libre', serif;
   }
 
 #about-image1, #about-image3{
   display: flex;
-  width: 30%;
+  width: 70%;
   height: 450px;
   float: right;
-  margin-right: 9rem;
+  margin-right: 5rem;
 }
+
 #about-image2{
   display: flex;
-  width: 25%;
+  width: 60%;
   height: 425px;
   float: left;
-  margin-left: 9rem;
+  margin-left: 5rem;
+}
+
+#values{
+text-align: start;
+font-size: 20px;
+width: 90%;
+margin: 5rem;
+line-height: 2rem;
+font-family: 'Frank Ruhl Libre', serif;
 }
 
 
+/* +++++++++++++++++++++++++++++++ CONTACT PAGE +++++++++++++++++++++++++++++++ */
+#form-row{
+  border-top: #ff0000 1px  solid;
+  border-right: #ff0000 3px solid;
+  border-bottom: #ff0000 1px  solid;
+  border-left: #ff0000 3px solid;
+  border-radius: 25px;
+  margin: 3rem;
+  padding: 1rem;
+  width: 100%;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+  width: 100%;
+  text-align: start ;
+  font-weight: bold;
+}
+
+p{
+  font-size: 25px;
+  font-family: 'Frank Ruhl Libre', serif;
+}
+label{
+  margin-top: .5rem;
+  font-size: 20px;
+  font-family: 'Frank Ruhl Libre', serif;
+  letter-spacing: .04rem;
+}
+
+input, textarea{
+  border-radius: 5px;
+  border: #c4b0b0 1px solid;
+  
+}
+
+input{
+  height: 45px;
+  padding: 8px;
+  font-size: 20px;
+  font-family: 'Cormorant Garamond', serif;
+}
+
+#form-button1{
+  margin: 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  border-radius: 10px;
+  background-color: rgb(50, 53, 61);
+  border: rgb(50, 53, 61) 2px solid; 
+  color: white;
+  font-family:'Frank Ruhl Libre', serif;
+  font-weight: 500;
+}
+
+#form-button2{
+  margin: 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  border-radius: 10px;
+  background-color: rgb(249, 250, 250);
+  border: rgba(50, 53, 61, 0.681) 2px solid; 
+  color: rgb(50, 53, 61);
+  font-family:'Frank Ruhl Libre', serif;
+  font-weight: 500;
+}
+#coffee-img{
+  margin-top: 6rem;
+}
 /* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
