adjusted package json and nav css

--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,10 @@ nav{
   text-decoration: none ;
 }
 
-#link1{margin-right: 18.5rem;}/*About */
-#link2{margin-right: 13.25rem;}/*Demos */
-#link3{margin-right: 7.75rem;}/*Blog */
-#link4{margin-right: .51rem}/* Contact */
+#link1{margin-right: 22.5rem;}/*About */
+#link2{margin-right: 14.25rem;}/*Demos */
+#link3{margin-right: 4.75rem;}/*Blog */
+/* #link4{margin-right: .51rem}Contact */
 
 /* ****************************** END OF NAV  *************************** */
 /* --------------------------   HEADER   ------------------------------------ */
