--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,6 @@ text-align: start;
 font-size: 22px;
 font-family: 'Frank Ruhl Libre', serif;
 line-height: 2rem;
-
 }
 
 #meCollage{
@@ -139,6 +138,14 @@ line-height: 2rem;
   margin-bottom: 2rem; 
 }
 
+#moreAbout{
+  color: rgb(29, 120, 181);  
+}
+
+#moreAbout:hover{
+    text-decoration: underline;
+    color: rgb(25, 91, 136);
+  }
 /* ******************************* END OF ABOUT ******************************* */
 /* --------------------------   PROJECT SECTION  ------------------------------------ */
 #projects{
@@ -176,11 +183,15 @@ line-height: 2rem;
 }
 
 #demos-link{
+color: rgb(29, 120, 181);
 text-align: center;
-font-size: 20px;
+font-size: 22px;
 font-family: 'Frank Ruhl Libre', serif;
 }
-
+#demos-link:hover{
+  text-decoration: underline;
+  color: rgb(25, 91, 136);
+}
 
 /* ******************************* END OF PROJECTS ******************************* */
 /* --------------------------   BLOG SECTION  ------------------------------------ */
@@ -218,8 +229,9 @@ h3{
 }
 
 #blogs-link{
+  margin-top: 2rem;
   text-align: center;
-  font-size: 20px;
+  font-size: 22px;
   font-family: 'Frank Ruhl Libre', serif;
   }
 
