--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@ font-family: 'Frank Ruhl Libre', serif;
 
 /* ******************** START OF NAV  *************************** */
 nav{
-  min-height: 5rem;
-  padding: 1rem;
+  min-height: 50px;
+  padding: 10px;
   justify-content: center;
   font-size: 20px ;
   font-family: 'Gelasio', serif;
@@ -30,38 +30,42 @@ nav{
 
 #logo {
   position: absolute;
-  left: 15px;
-  height: 95px;
-  width: 95px;
+  left: 25px;
+  max-height: 95px;
+  max-width: 95px;
 }
 
-#link1, #link2, #link3, #link4{
+#link1, #link2, #link3{
   position: absolute;
   right: 10px;
   color: #000000;
-  margin-right: 5rem;
+  
   text-align: right;
   text-decoration: none ;
 }
 
-#link1{margin-right: 22.5rem;}/*About */
-#link2{margin-right: 14.25rem;}/*Demos */
-#link3{margin-right: 4.75rem;}/*Blog */
+#link1{margin-right: 200px;}/*About */
+#link2{margin-right: 110px;}/*Demos */
+#link3{margin-right: 10px;}/*Blog */
 /* #link4{margin-right: .51rem}Contact */
 
 /* ****************************** END OF NAV  *************************** */
 /* --------------------------   HEADER   ------------------------------------ */
-
+#header{
+  background-color: #000000;
+ }
 
 #header-image{
+  max-height: 500px;
   width: 100%;
-  height: 60dvh;
 }
 
 #header-text{
   position: absolute;
-  top: 20dvh;
-  left: 20dvh;
+  display: flex;
+  flex-direction: column;
+  top: 100px;
+  left: 100px;;
   text-align: left;
   color: white;
   
@@ -90,39 +94,48 @@ nav{
 
 #profile-pic{
   position: absolute;
-  top: 15dvh;
-  left: 120dvh;
-  width: 40dvh;
-  height: 45dvh;
+  top: 100px;
+  left: 60%;
+  max-width: 350px;
+  max-height: 400px;
 }
 
-@media screen and (max-width: 500px) {
-  header  {
-    float: none;
-    display: block;
-    text-align: left;
+@media screen and (max-width: 1200px) {
+  nav{
+    min-height: 50px;
+    padding: 10px;
+    font-size: 15px ;
+    font-family: 'Gelasio', serif;
   }
-
-  #header-image {
-    height: 80dvh;
+  #link1{margin-right: 130px;}/*About */
+  #link2{margin-right: 70px;}/*Demos */
+  #link3{margin-right: 0px;}/*Blog */
+  
+  #header-image{
+   min-height: 600px;
+    width: 100%;
   }
+  #header{
+    display: flex;
+    flex-direction: column;
+  }
+  
   #header-text{
-    position: absolute;
-    top: 5dvh;
-    left: 20dvh;
-    text-align: left;
+    top: 100px;
+    left: 40px;
+    /* flex-wrap: wrap; */
+    width: auto;
     color: white;
-    
   }
   #header-text h1{
-    font-size: 50px; 
+    font-size: 40px; 
     font-family: 'Playfair Display', serif; 
     font-weight: 700;
     text-shadow: rgb(182, 182, 181) 1px 1px 3px;
   }
   
   #header-text h2{
-    font-size: 40px; 
+    font-size: 30px; 
     color:rgb(246, 70, 70);
     font-family:'Playfair Display', serif;
     font-weight: 700;         
@@ -132,18 +145,18 @@ nav{
   }
   
   #header-text h4{
-    font-size: 28px; 
+    font-size: 24px; 
     font-family: 'Gelasio', serif;
     text-shadow: rgb(182, 182, 181) 1px 1px 3px;
    }
   
   #profile-pic{
-    position: absolute;
-    top: 45dvh;
-    left: 20dvh;
-    width: 30dvh;
-    height: 35dvh;
+    top: 350px;
+    left: 20%;
+    width: 150px;
+    height: 300px;
   }
+  
   #blogs {
     flex-direction: column;
   }
@@ -169,8 +182,7 @@ nav{
 #bitAbout{
 display: flex;
 flex-direction: column;
-float: left;
-text-align: start;
+flex-wrap: wrap;
 font-size: 22px;
 font-family: 'Frank Ruhl Libre', serif;
 line-height: 2rem;
